<resources>
    <string name="splash_title">Care Nutrition Limited</string>
    <string name="title_home">Home</string>
    <string name="title_route">Route</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_order">Order</string>
    <string name="title_chat">Chat</string>
    <string name="title_shop_route">Shop &amp; Route List</string>
    <string name="title_order_summary">Order Summary</string>
    <string name="title_notice">Notice</string>
    <string name="title_visit_report">Visit Report</string>
    <string name="title_trade_offers">Trade Offers</string>
    <string name="title_product_summary">Product Wise Summary</string>
    <string name="title_product_stock_update">Product Wise Stock Update</string>
    <string name="title_incentive">Incentive</string>
    <string name="welcome">welcome</string>
    <string name="rank">Rank</string>
    <string name="st">st</string>
    <string name="nd">nd</string>
    <string name="rd">rd</string>
    <string name="th">th</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mapbox_access_token" translatable="false">pk.test</string>
    <string name="current_location">Current Location</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="todays_route">Today\'s Route</string>
    <string name="remarks_late_reason">Remarks/ Late Reason</string>
    <string name="type_your_reason_here">Type your reason here…</string>
    <string name="most_frequent">Most Frequent</string>
    <string name="high_stock">High Stock</string>
    <string name="low_stock">Low Stock</string>
    <string name="atoz">A to Z</string>
    <string name="ztoa">Z to A</string>
    <string name="stock_out">Stock out</string>
    <string name="product_stock_out">Product is stock out</string>
    <string name="sr_code">SR Code</string>
    <string name="ss_id">SS Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="sure_log_out">Are you sure you want to log out?</string>
    <string name="confirm">Confirm</string>
    <string name="order_confirm">Order Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="check">Check</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="checked_out">Checked Out</string>
    <string name="are_you_sure_want_to_check_out">Are you sure want to check out?</string>
    <string name="try_again">Try Again</string>
    <string name="refresh">Refresh</string>
    <string name="route_plan">Route Plan</string>
    <string name="verified">Verified</string>
    <string name="see_location">See Location</string>
    <string name="route_code">Route Code</string>
    <string name="shop_count">Shop Count</string>
    <string name="active_so_list">Active SO List</string>
    <string name="inactive_so_list">Inactive SO List</string>
    <string name="market">Market: </string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="date_range">Date Range</string>
    <string name="attendance">Attendance</string>
    <string name="history">History</string>
    <string name="last_updated_time">Last updated time</string>
    <string name="last_location">Last location</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="late">Late</string>
    <string name="today_summary">Today Summary</string>
    <string name="last_week_summary">Last Week Summary</string>
    <string name="today_report">Today Report</string>
    <string name="last_week_report">Last Week Report</string>
    <string name="last_week_product">Last Week Product</string>
    <string name="low_stock_product">Low Stock Product</string>
    <string name="today_category">Today Category</string>
    <string name="last_week_category">Last Week Category</string>
    <string name="last_week_delivery">Last Week Delivery</string>
    <string name="bounce_list">Last Week Bounce</string>
    <string name="custom">Custom</string>
    <string name="summary">Summary</string>
    <string name="total_order_value">Total Order Value</string>
    <string name="sku_per_memo">SKU Per Memo</string>
    <string name="visit_ratio">Number of Visits</string>
    <string name="number_of_memo">Number of Memo</string>
    <string name="visit_500m">Visit (0–100m)</string>
    <string name="aiv">AIV</string>
    <string name="ads">ADS</string>
    <string name="rds">RDS</string>
    <string name="bounce">Bounce</string>
    <string name="delivery_value">Delivery Value</string>
    <string name="total_delivery_value">Total Delivery Value</string>
    <string name="total_target">Total Target</string>
    <string name="total_target_achieved">Total Target Achieved</string>
    <string name="details">Details</string>
    <string name="start_ordering">Start Ordering</string>
    <string name="total">Total-</string>
    <string name="last_order_date">Last order date- %1$s</string>
    <string name="last_delivery_date">Last delivery date- %1$s</string>
    <string name="items">Items</string>
    <string name="items_"> %1$s Items</string>
    <string name="ordered_at">Ordered at- </string>
    <string name="no_route_selected_today">Today\'s route not selected yet. \nSubmit your attendance for route selection.</string>
    <string name="no_order_found">No order found today</string>
    <string name="coming_soon">Coming Soon!!!</string>
    <string name="no_so_found">No SO found</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="live_stock_update"><a href="http://www.bla.com">Live Stock Update</a></string>
    <string name="summary_link"><a href="http://www.bla.com">Summary</a></string>
    <string name="ov">OV:</string>
    <string name="bpc">SPM:</string>
    <string name="lpc">NM:</string>
    <string name="order_collection">Order Collection</string>
    <string name="select_dokan">Select Dokan</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="select">Select</string>
    <string name="sort_by">Sort by</string>
    <string name="filter">Filter</string>
    <string name="search_shop">Search shop</string>
    <string name="select_route">Select Route</string>
    <string name="create_shop">Create New Shop</string>
    <string name="previous_order">Previous Order</string>
    <string name="search_product">Search by product name</string>
    <string name="no_order">No Order</string>
    <string name="save_order">Save Order</string>
    <string name="update_order">Update Order</string>
    <string name="add_more_item">Add More Item</string>
    <string name="download_chalan">Download Chalan</string>
    <string name="confirm_order_dialog">Are you sure want to confirm today\'s order?</string>
    <string name="update_order_dialog">Are you sure want to update this order?</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_delivery_update">Order Delivery Update</string>
    <string name="shops_ordered_this_month"> Shops ordered this month</string>
    <string name="sold_in">Sold in </string>
    <string name="route"> route</string>
    <string name="product_list">Product List</string>
    <string name="route_list">Route List</string>
    <string name="shop_list">Shop List</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="bounced">Bounced</string>
    <string name="total_bounce">Total Bounce</string>
    <string name="bounce_reason">Reason of Bounce</string>
    <string name="product_return_reason">Product return reason…</string>
    <string name="no_order_to_download_chalan">No order to download Chalan</string>
    <string name="order_selection">Order Selection</string>
    <string name="report_selection">Report Selection</string>
    <string name="today">Today</string>
    <string name="lwsd">LWSD</string>
    <string name="see_more">See More…</string>
    <string name="see_less">See Less…</string>
    <string name="add_notice">Add Notice</string>
    <string name="type_notice_here">Type notice here…</string>
    <string name="new_shop_creation">New Shop Creation</string>
    <string name="update_shop_information">Update Shop Information</string>
    <string name="verify_shop">Are you want to verify the Shop?</string>
    <string name="adjust_shop_location">Adjust Shop Location</string>
    <string name="adjust_shop_location_link"><a href="http://www.bla.com">Adjust Shop Location</a></string>
    <string name="select_location">Select Location</string>
    <string name="select_shop_type">Select Shop Type</string>
    <string name="shop_name">Shop Name</string>
    <string name="select_category_of_outlet">Select Category of Outlet</string>
    <string name="select_market_opportunity">Select Market Opportunity</string>
    <string name="select_buyer">Select Buyer</string>
    <string name="address">Address</string>
    <string name="owner_name">Owner Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="need_more_zoom">Need to zoom more to get better view at your shop location!</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="list_tab_1">Route List</string>
    <string name="list_tab_2">Shop List</string>
    <string name="take_image">Take Image</string>
    <string name="km">%1$s km</string>
    <string name="not_available">Not Available</string>
    <string name="failure_bad_request">Bad Request.</string>
    <string name="failure_can_not_connect_to_the_server">Can not connect to the server.</string>
    <string name="failure_forbidden_request">Forbidden Request.</string>
    <string name="failure_internal_server_error">Internal server error.</string>
    <string name="failure_method_not_allowed">Method not allowed.</string>
    <string name="failure_no_internet_available">No internet available.</string>
    <string name="failure_not_exist_in_cache">Not exist in cache.</string>
    <string name="failure_not_found">Not found.</string>
    <string name="failure_too_many_request">Too many request.</string>
    <string name="failure_unauthorized_error">Unauthorized error.</string>
    <string name="failure_failed_to_cache">Failed to cache.</string>
    <string name="location">Location</string>
    <string name="outlet_s">%1$s Outlet(s)</string>
    <string name="language">Language</string>
    <string name="_0_0">0.0</string>
    <string name="jar_box">Jar/box</string>
    <string name="title_product_stock_request">Request</string>
    <string name="product_name">Product Name:</string>
    <string name="_0">0</string>
    <string name="title_approval">Approval</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="decline">Decline</string>
    <string name="approve">Approve</string>
    <string name="remarks">Remarks</string>
    <string name="product_stock_request">Product Stock Request</string>
    <string name="name">Name</string>
    <string name="db_house">DB House</string>
    <string name="in_stock">%1$s in stock</string>
    <string name="minus_button">Minus Button</string>
    <string name="plus_button">Plus Button</string>
    <string name="all">All (%1$s)</string>
    <string name="authorize">Authorize (%1$s)</string>
    <string name="rejected">Rejected (%1$s)</string>
    <string name="verified_">Verified (%1$s)</string>
</resources>