<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="nav_view">

    <item
        android:id="@+id/menu_shop_route"
        android:iconTint="@color/black"
        android:title="@string/title_shop_route" />
  <item
      android:id="@+id/menu_order_summary"
      android:iconTint="@color/black"
      android:title="@string/title_order_summary" />
  <item
      android:id="@+id/menu_notice"
      android:iconTint="@color/black"
      android:title="@string/title_notice" />
  <item
      android:id="@+id/menu_trade_offers"
      android:iconTint="@color/black"
      android:title="@string/title_trade_offers" />
  <item
      android:id="@+id/menu_product_summary"
      android:iconTint="@color/black"
      android:title="@string/title_product_summary" />
  <item
      android:id="@+id/menu_product_stock_update"
      android:iconTint="@color/black"
      android:title="@string/title_product_stock_update" />
  <item
      android:id="@+id/menu_incentive"
      android:iconTint="@color/black"
      android:title="@string/title_incentive" />
  <item
      android:id="@+id/menu_logout"
      android:iconTint="@color/black"
      android:title="Logout" />

</menu>
