<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_5dp">

    <HorizontalScrollView
        android:id="@+id/chipScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacing="5dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAll"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/all"
                android:textColor="@color/chip_text_selector"
                android:textSize="11sp"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipCornerRadius="16dp"
                app:chipStrokeWidth="0dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAuthorize"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorize"
                android:textColor="@color/chip_text_selector"
                android:textSize="11sp"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipCornerRadius="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipVerified"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verified_"
                android:textColor="@color/chip_text_selector"
                android:textSize="11sp"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipCornerRadius="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipRejected"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rejected"
                android:textColor="@color/chip_text_selector"
                android:textSize="11sp"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background_selector"
                app:chipCornerRadius="16dp" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>