<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/cardview_bg"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStockAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/in_stock"
            android:textColor="@color/red"
            android:textSize="9sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvProductVariation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_white_bg_stroke"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:text="@string/jar_box"
            android:textColor="@color/btn_color_dark"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStockAvailable" />

        <TextView
            android:id="@+id/tvPerUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/button_white_bg_stroke"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:text="@string/_0_0"
            app:layout_constraintStart_toEndOf="@+id/tvProductVariation"
            android:textColor="@color/btn_color_dark"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tvStockAvailable" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/cardview_bg_stroke_2dp"
            android:orientation="horizontal"
            android:padding="1dp"
            app:layout_constraintBottom_toTopOf="@+id/llSubTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnMinus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/minus_button"
                android:background="@drawable/cardview_bg_stroke_2dp"
                android:backgroundTint="@color/btn_gray_light"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:src="@drawable/ic_minus" />

            <EditText
                android:id="@+id/tvCount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="No"
                android:background="@null"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/_0"
                android:ems="2"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <ImageButton
                android:id="@+id/btnPlus"
                android:layout_width="24dp"
                android:contentDescription="@string/plus_button"
                android:layout_height="24dp"
                android:background="@drawable/cardview_bg_stroke_2dp"
                android:backgroundTint="@color/btn_gray_light"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:src="@drawable/ic_plus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSubTotal"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/button_bg_stroke"
            android:backgroundTint="@color/btn_color_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llCount">

            <TextView
                android:id="@+id/tvSubTotal"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="@drawable/button_bg_stroke"
                android:gravity="center"
                android:text="@string/_0_0"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>